--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.12.1",
     "resolve": "1.6.0",
