--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-loaders": "^3.0.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-scroll": "^1.7.10",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
