--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.2",
+    "react-day-picker": "^7.2.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-loaders": "^3.0.1",
