--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-loaders": "^3.0.1",
+    "react-rating": "^1.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scroll": "^1.7.10",
