--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.2",
-    "react-day-picker": "^7.2.0",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-day-picker": "^7.2.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-loaders": "^3.0.1",
