--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "app.js",
   "dependencies": {
+    "auth0-js": "^9.7.3",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
@@ -17,6 +18,7 @@
     "bootstrap": "^4.1.3",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.6",
     "cors": "^2.8.4",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
