--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-google-recaptcha": "^1.0.0",
+    "react-lazy-load": "^3.0.13",
     "react-loaders": "^3.0.1",
     "react-rating": "^1.3.0",
     "react-redux": "^5.0.7",
