--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "rrules",
+  "name": "rrules-client",
   "version": "0.1.0",
   "private": true,
   "main": "app.js",
+  "author": "Goolpe https://github.com/Goolpe",
   "dependencies": {
     "auth0-js": "^9.7.3",
     "autoprefixer": "7.1.6",
