--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scroll": "^1.7.10",
+    "react-toastify": "^4.3.0",
     "react-youtube": "^7.6.0",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
