--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "tooltip.js": "^1.3.0",
     "url-loader": "0.6.2",
     "validator": "^10.6.0",
     "webpack": "3.8.1",
