--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "react-icons": "^3.0.5",
     "react-lazy-load": "^3.0.13",
     "react-loaders": "^3.0.1",
+    "react-player": "^1.6.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scroll": "^1.7.10",
     "react-toastify": "^4.3.0",
-    "react-youtube": "^7.6.0",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
