--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "fetch-jsonp": "^1.1.3",
     "file-loader": "1.1.5",
+    "flatpickr": "^4.5.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
@@ -51,6 +52,7 @@
     "react-day-picker": "^7.2.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
+    "react-flatpickr": "^3.6.4",
     "react-google-recaptcha": "^1.0.0",
     "react-icons": "^3.0.5",
     "react-lazy-load": "^3.0.13",
