--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "regenerator-runtime": "^0.12.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
+    "styled-components": "^3.4.10",
     "sw-precache-webpack-plugin": "0.11.4",
     "tooltip.js": "^1.3.0",
     "url-loader": "0.6.2",
