--- a/package.json
+++ b/package.json
@@ -5,48 +5,17 @@
   "main": "app.js",
   "author": "Goolpe https://github.com/Goolpe",
   "dependencies": {
-    "auth0-js": "^9.7.3",
-    "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-react-app": "^3.1.1",
-    "babel-runtime": "6.26.0",
     "bootstrap": "^4.1.3",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.6",
-    "cors": "^2.8.4",
-    "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
-    "dotenv-expand": "4.2.0",
-    "ejs": "^2.6.1",
-    "eslint": "4.10.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
-    "extract-text-webpack-plugin": "3.0.2",
     "fetch-jsonp": "^1.1.3",
-    "file-loader": "1.1.5",
     "flatpickr": "^4.5.2",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
     "promise": "8.0.1",
-    "raf": "3.4.0",
     "react": "^16.4.2",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-day-picker": "^7.2.1",
@@ -66,18 +35,9 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "^0.12.1",
-    "resolve": "1.6.0",
-    "style-loader": "0.19.0",
     "styled-components": "^3.4.10",
     "sw-precache-webpack-plugin": "0.11.4",
-    "tooltip.js": "^1.3.0",
-    "url-loader": "0.6.2",
-    "validator": "^10.6.0",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "tooltip.js": "^1.3.0"
   },
   "scripts": {
     "dev": "nodemon app.js",
@@ -93,7 +53,55 @@
   "devDependencies": {
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.3",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "autoprefixer": "7.1.6",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react-app": "^3.1.1",
+    "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
+    "cors": "^2.8.4",
+    "css-loader": "0.28.7",
+    "dotenv": "4.0.0",
+    "dotenv-expand": "4.2.0",
+    "ejs": "^2.6.1",
+    "eslint": "4.10.0",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.4.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
+    "jwt-decode": "^2.2.0",
+    "node-sass": "^4.9.3",
+    "nodemon": "^1.18.3",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "promise": "8.0.1",
+    "raf": "3.4.0",
+    "regenerator-runtime": "^0.12.1",
+    "resolve": "1.6.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "0.19.0",
+    "styled-components": "^3.4.10",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.6.2",
+    "validator": "^10.6.0",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
+    "whatwg-fetch": "2.0.3"
   },
   "jest": {
     "collectCoverageFrom": [
